--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -35,9 +35,9 @@
             <li>
                 <span th:utext="${webPage.page}"></span>
             </li>
-<!--            <li>-->
-<!--                <a th:href="${webPage.fullPageDumpUrl}" target="_blank">Перейти до сторінки</a>-->
-<!--            </li>-->
+            <li>
+                <a th:href="@{'/cache/' + ${webPage.id}}" target="_blank">кеш</a>
+            </li>
         </ul>
     </div>
 
