--- a/src/main/resources/templates/cache.html
+++ b/src/main/resources/templates/cache.html
@@ -20,6 +20,10 @@
             </form>
         </div>
     </div>
+    <div class="pt-2 "></div>
+    <p>сторінку збережено з id: <span th:text="${id}"></span> ;&nbsp;&nbsp;</p>
+    <div class="border "></div>
+    <div class="pt-2 "></div>
     <div class="row">
         <div th:utext="${content}"></div>
     </div>
