--- a/src/main/resources/templates/cache.html
+++ b/src/main/resources/templates/cache.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="pt-2 "></div>
-    <p>сторінку збережено з id: <span th:text="${id}"></span> ;&nbsp;&nbsp;</p>
+    <p>кеш сторінки з id: <span th:text="${id}"></span></p>
     <div class="border "></div>
     <div class="pt-2 "></div>
     <div class="row">
