--- a/src/main/resources/templates/crawler.html
+++ b/src/main/resources/templates/crawler.html
@@ -23,6 +23,8 @@
                 <form method="post" th:action="@{/delete}">
                     <button type="submit" class="btn btn-danger">Delete All Data</button>
                 </form>
+                <div class="pt-5"></div>
+                <p>Зараз в базі даних збережено <span th:text="${pageCount}"></span> web-сторінок.</p>
             </div>
         </div>
     </div>
